2012-09-14  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/aggcat.spad.pamphlet: Generalize FLAGG.

2012-09-13  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/kl.spad.pamphlet: Correctly handle
	insertions during searches in SortedCache.

2012-09-13  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/buildom.boot: Make sure that builtin domain
	belong to right categories.

2012-09-12  Raoul Bourquin  <somebody@bluewin.ch>

	* src/algebra/intpm.spad.pamphlet: Pattern match
	Fresnel integrals.

2012-09-12  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/pgcd.spad.pamphlet: Fix problem with
	bad reduction.

2012-09-11  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/aggcat.spad.pamphlet,
	src/algebra/list.spad.pamphlet,
	src/algebra/table.spad.pamphlet,
	src/interp/buildom.boot: Generalize hash tables.

2012-09-08  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/algfunc.spad.pamphlet: Fix equality
	of 'rootOf'.

2012-09-07  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/limitps.spad.pamphlet: Use Gruntz
	algorithm also for one sided limits.

2012-09-07  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/genser.spad.pamphlet,
	src/algebra/mrv_limit.spad.pamphlet,
	src/algebra/limitps.spad.pamphlet: Small speedups.

2012-09-05  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	Add Gruntz-Gonnet algorithm for computing limits.
	* src/algebra/mrv_limit.spad.pamphlet: New file.
	src/algebra/limitps.spad.pamphlet: Use 'mrv_limit'
	for exp-log functions.

2012-09-05  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/fs2ups.spad.pamphlet: Generalize power
	series expanders.

2012-09-05  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/rf.spad.pamphlet: Improve removal of
	roots from denominators.

2012-09-03  Ralf Hemmecke  <ralf@hemmecke.de>

	* src/algebra/hashstate.spad.pamphle: add documentation for
	HashState

2012-09-02  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
