@@ -66,10 +66,10 @@ HashState(): with
       ++ value(x) returns a SingleInteger value corresponding to x.
   == add
     Rep == Integer
-    new(): % == per HASHSTATE_-BASIS$Lisp
-    value(hs: %): I == (HASHSTATE_-MAKE_-FIXNUM(hs)$Lisp) pretend I
-    update!(hs: %, i: I): % == per HASHSTATE_-UPDATE(hs, i)$Lisp
-    modulo(hs: %, i: I): I == (HASHSTATE_-MOD(hs, i)$Lisp) pretend I
+    new(): % == per HASHSTATEBASIS$Lisp
+    value(hs: %): I == (HASHSTATEMAKEFIXNUM(hs)$Lisp) pretend I
+    update!(hs: %, i: I): % == per HASHSTATEUPDATE(hs, i)$Lisp
+    modulo(hs: %, i: I): I == (HASHSTATEMOD(hs, i)$Lisp) pretend I
 @
 
 \section{Usage}
