@@ -1,3 +1,8 @@
+2012-09-14  Ralf Hemmecke  <ralf@hemmecke.de>
+
+	* src/algebra/hashstate.spad.pamphlet, src/lisp/primitives.lisp:
+	HASHSTATE: remove hyphen in Lisp identifiers
+
 2012-09-14  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
 
 	* src/algebra/aggcat.spad.pamphlet: Generalize FLAGG.
